# walmart-sales-classification

./: .coverage  .env  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.toml  model_results.json  pyproject.toml  requirements.txt  requirments.txt  startup.sh  test.ipynb  test.txt
.github/workflows/: ci.yml  dashboard-ui_walmart-dashboard-bishoy.yml  dashboard-ui_walmart-sales-classification.yml
data/processed/: validation_report.txt
docs/: report_draft.md
notebooks/: feature-selection.ipynb
reports/eda/: dashboard_data.json  eda_report.json  eda_summary.json
src/cleaning/: cleaning.py
src/dashboard/: app.py
src/data/: acquisition.py
src/eda/: eda.py
src/features/: feature_engineering.py  preprocessing.py
src/models/: dummy_baseline.ipynb  generate_model_insights.py  knn.ipynb  logistic_regression.ipynb  metrics_utils.py  plots.py  random_forest.ipynb  svm.ipynb  xgboost.ipynb
src/utils/: logger.py
src/validation/: common.py  constants.py  validator.py
src/validation/checks/: __init__.py  accuracy.py  completeness.py  consistency.py  distribution.py  outliers.py  relationships.py  uniqueness.py
tests/: test_acquisition.py  test_cleaning.py  test_feature_engineering.py  test_integration.py  test_validation.py
