[tool.poetry]
name = "walmart-sales-classification"
version = "0.1.0"
description = "Supervised binary classification of Walmart weekly store sales as High vs Low using Kaggle + FRED data."
authors = [
    "Member 1 <member1@university.edu>",
    "Member 2 <member2@university.edu>",
    "Member 3 <member3@university.edu>",
    "Member 4 <member4@university.edu>",
]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
numpy = "^1.26.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
scikit-learn = "^1.4.0"
mlflow = "^2.11.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
loguru = "^0.7.0"
plotly = "^6.7.0"
streamlit = "^1.56.0"
xgboost = "^3.2.0"
ruff = "^0.15.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
black = "^24.0.0"
flake8 = "^7.0.0"
isort = "^5.13.0"
pre-commit = "^4.6.0"
ipykernel = "^7.2.0"
ruff = "^0.15.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 150
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]  # errors, flakes, import sorting

[tool.ruff.format]
quote-style = "double"